# Jeimel.github.io

./: .gitignore  Cargo.toml  index.html  jeimel-github-io-14f9f145d1f51994.js  jeimel-github-io-14f9f145d1f51994_bg.wasm  jeimel-github-io-2d3ddd6bd7e7dae.js  jeimel-github-io-2d3ddd6bd7e7dae_bg.wasm  jeimel-github-io-3866423ecaeac482.js  jeimel-github-io-3866423ecaeac482_bg.wasm  jeimel-github-io-5ecdbfe82074f1f3.js  jeimel-github-io-5ecdbfe82074f1f3_bg.wasm  jeimel-github-io-8efce07f8c79495f.js  jeimel-github-io-8efce07f8c79495f_bg.wasm  jeimel-github-io-94a02025eda7f5e9.js  jeimel-github-io-94a02025eda7f5e9_bg.wasm  jeimel-github-io-c41a873ffe436ed2.js  jeimel-github-io-c41a873ffe436ed2_bg.wasm  style-4750de4f321b2e8b.css  style-5880dd3e81dd309a.css  style-f9cba5694500cce5.css  style.css
.github/workflows/: continuous_deployment.yml
src/: components.rs  main.rs  perlin.rs
src/components/: mod.rs  perlin.rs  project.rs  ui.rs
src/pages/: home.rs  infinite.rs  mod.rs
